Summarize recently added data to catch
